# sm-ext-socket

./: .clang-format  .clang-tidy  .gitignore  32BIT_BUILD_GUIDE.md  BUILD.md  BUILD_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Callback.cpp  Callback.h  CallbackHandler.cpp  CallbackHandler.h  DOCUMENTATION.md  Define.h  Doxyfile  Extension.cpp  Extension.h  IPv6_GUIDE.md  IPv6_IMPLEMENTATION_SUMMARY.md  MIGRATION.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_SUMMARY.md  Socket.cpp  Socket.h  SocketHandler.cpp  SocketHandler.h  SocketTLS.cpp  SocketTLS.h  TESTING_GUIDE.md  TLS_GUIDE.md  TLS_IMPLEMENTATION_SUMMARY.md  TODO.md  TODO_COMPLETION_REPORT.md  socket.inc
.github/: copilot-instructions.md
.github/workflows/: build.yml
build_32bit/: Makefile
build_64bit/: Makefile
examples/: async_demo.sp  example.sp  ipv6_server.sp  listenexample.sp  selftest.sp  sendto_test.sp  sockettest.sp  tls_client.sp  tls_example.sp
sdk/: smsdk_config.h  smsdk_ext.h
tests/: CMakeLists.txt  test_main.cpp  test_socket_basic.cpp  test_socket_integration.cpp  test_tls.cpp
